# uvtui

./: .gitignore  LICENSE  README.md  pyproject.toml
uvtui/: __main__.py  app.py
uvtui/screens/: help_screen.py  install_screen.py  python_screen.py
uvtui/styles/: app.tcss  help_screen.tcss  install_screen.tcss  python_screen.tcss
uvtui/utils/: uv_commands.py
uvtui/widgets/: status_bar.py  uv_checker.py
