[project]
name = "uvtui"
version = "0.1.0"
description = "Terminal UI for UV Package Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=7.1.0",
    "textual-dev>=1.8.0",
]
packages = [{include = "uvtui"}]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "uvtui"
module-root = ""